src/character/snapshots/bag_of_tricks__character__characteristics__tests__characteristics.snap
---
source: src/character/characteristics.rs
expression: characteristics

---
age: 100
base_speed: 30
gender: Female
height: 75
size: Medium
weight: 300

