src/character/snapshots/bag_of_tricks__character__characteristics__tests__characteristics_display-2.snap
---
source: src/character/characteristics.rs
expression: "format!(\"{}\", characteristics)"
---
Age: 100
Gender: Female

