src/character/snapshots/bag_of_tricks__character__characteristics__tests__characteristics_display.snap
---
source: src/character/characteristics.rs
expression: characteristics
---
age: 100
gender: Female
height: 75
size: Medium
weight: 300
